Fix photo gallery spacing
Bug Fix

--- a/wp-content/themes/ic/css/media.css
+++ b/wp-content/themes/ic/css/media.css
@@ -1158,7 +1158,7 @@ and (max-width : 768px) {
         width: 200px;
     }
     .post-content .imagegal.photos ul li {
-	    display: inline-block;
+	    display: inline-block !important;
 	    float: none;
 	    margin: 0;
 	    width: 50%;
@@ -1206,7 +1206,7 @@ and (max-width : 767px) {
         width: 200px;
     }
     .post-content .imagegal.photos ul li {
-	    display: inline-block;
+	    display: inline-block !important;
 	    float: none;
 	    margin: 5px 0 0 0;
 	    width: 99.3%
